unpackaged/main/default/objects/Gateway_Processing__c/Gateway_Processing__c.object-meta.xml
<CustomObject>
    <label>Gateway Processing</label>
    <nameField>
        <displayFormat>GP-{0000}</displayFormat>
        <label>Gateway Processing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Processing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>