unpackaged/main/default/objects/Gateway_Processing__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <label>Charges</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Location</fullName>
            </value>
            <value>
                <fullName>Per Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>