unpackaged/main/default/objects/Gateway_Processing__c/fields/Gateway_Processing_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Processing_Total_Price__c</fullName>
    <formula>Fee__c *  Volume_Number_Of_Location__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gateway Processing Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>