unpackaged/main/default/objects/Gateway_Processing__c/fields/Volume_Number_Of_Location__c.field-meta.xml
<CustomField>
    <fullName>Volume_Number_Of_Location__c</fullName>
    <label>Monthly Volume / Number Of Location</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>